2007-12-04  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        Remove http/tests/incremental/frame-focus-before-load.html from the skipped list
        as it is no longer crashing. <rdar://problem/5507278>

        * platform/win/Skipped:

2007-12-04  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        Test for <rdar://problem/5622464> controls should show up for audio element

        * media/audio-controls-rendering.html: Added.
        * platform/mac/media/audio-controls-rendering-expected.checksum: Added.
        * platform/mac/media/audio-controls-rendering-expected.png: Added.
        * platform/mac/media/audio-controls-rendering-expected.txt: Added.

2007-11-27  Adam Roben  <aroben@apple.com>

        Remove a now-passing test from the Windows Skipped file

        Reviewed by Maciej.

        * platform/win/Skipped:

2007-12-03  Antti Koivisto  <antti@apple.com>

        Reviewed by Adele.
        
        Test for <rdar://problem/5624802> 
        Controller displays outside of <video> element when width and height aren't specified 

        * media/remove-from-document.html: Improve coverage by doing relayout before finishing.
        * media/video-controls-rendering.html: Added.
        * platform/mac/media/video-controls-rendering-expected.checksum: Added.
        * platform/mac/media/video-controls-rendering-expected.png: Added.
        * platform/mac/media/video-controls-rendering-expected.txt: Added.

2007-12-04  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - test for first part of http://bugs.webkit.org/show_bug.cgi?id=16220
          <rdar://problem/5625221> Crash opening www.news.com (CNet)

        * fast/js/regexp-overflow-expected.txt: Updated.
        * fast/js/resources/regexp-overflow.js: Added test cases.

2007-12-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - remove passing test

        * platform/win/Skipped:
