@@ -1,0 +1,20 @@
+<html>
+    <head>
+        <script>
+        function test()
+        {
+            var tf = document.getElementById('tf');
+            tf.focus();
+            if (window.layoutTestController) {
+                eventSender.keyDown("a");
+                eventSender.keyDown("b");
+                eventSender.keyDown("c");
+            }
+        }
+        </script>
+    </head>
+    <body onload="test()">
+        This tests that a negative outline-offset won't get in the way of a cursor in a text control.<br>
+        <input id="tf" style="font-size: 20px; border: solid thin black;" value="This tests that typing doesn't cut holes in the focus outline"></input>
+    </body>
+</html>
