@@ -1,0 +1,17 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderText {#text} at (0,0) size 550x18
+        text run at (0,0) width 550: "This tests that a negative outline-offset won't get in the way of a cursor in a text control."
+      RenderBR {BR} at (550,14) size 0x0
+      RenderTextControl {INPUT} at (2,20) size 259x27 [bgcolor=#FFFFFF] [border: (1px solid #000000)]
+      RenderText {#text} at (0,0) size 0x0
+      RenderText {#text} at (0,0) size 0x0
+      RenderText {#text} at (0,0) size 0x0
+layer at (12,30) size 255x23
+  RenderBlock {DIV} at (2,2) size 255x23
+    RenderText {#text} at (1,0) size 34x23
+      text run at (1,0) width 34: "abc"
+caret: position 3 of child 0 {#text} of child 0 {DIV} of child 3 {INPUT} of child 1 {BODY} of child 0 {HTML} of document
